fix: harden immutable value boundaries